<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="22dp"
        android:paddingTop="8dp"
        android:paddingEnd="22dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nearby_devices"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_discovery_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/searching_nearby_devices" />

        <Spinner
            android:id="@+id/spinner_nearby_servers"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/nearby_devices" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/controller_channel_ip"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_server_controller_ip"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:autofillHints=""
            android:hint="@string/any_connectable_network_card_ip"
            android:inputType="textUri"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/mode_"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_mode"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:entries="@array/select_mode" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/home_dir"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_home_dir"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:autofillHints=""
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>
</ScrollView>
