<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="96dp"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_interface_type"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/network_channels"
            android:padding="4dp"
            android:src="@drawable/wifi" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txv_interface_name_and_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_interface_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_interface_enable"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/enable" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dian_nao_zhi_ding_wang_ka_ip" />

        <EditText
            android:id="@+id/edit_client_bind_ip"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:hint="@string/you_xi_tong_mo_ren_fen_pei"
            android:inputType="textUri"
            android:singleLine="true"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
